recursion.lessons.recursion.tree.Tree.scala.error
Tree:12: error: not found: value leveBrosse
		leveBrosse()
                ^Tree:14: error: not found: value baisseBrosse
		baisseBrosse()
                ^